<resources>
    <string name="app_name">AirplaneApp</string>
    <string name="appTitle">Airplane Aaron</string>
    <string name="goToLogin">Login</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="logUserandPass">Log</string>
    <string name="createAccount">Create Account</string>
    <string name="CreateAcc">Create Acc</string>
    <string name="newUser">New Username</string>
    <string name="newPass">New Password</string>
    <string name="createAccountButton">Create</string>
    <string name="reserveButton">Reserve</string>
    <string name="cancelButton">Cancel</string>
    <string name="modifyButton">Modify</string>
    <string name="backButton">Back</string>
    <string name="title_activity_reserve_flight">ReserveFlight</string>
    <string name="departSearch">Enter Depart Location</string>
    <string name="arrivalSearch">Enter Arrival Location</string>
    <string name="numTicketsSearch">Enter Number of Tickets</string>
    <string name="searchButton">Search</string>
    <string name="numOfTicket">Enter #</string>
    <string name="enterFlightName">Enter Flight Name</string>
    <string name="enterButton">Enter Ticket</string>
    <string name="enterNumberSeats">Enter # Of Seats</string>
    <string name="sentTicketButton">Finish</string>
    <string name="enterButton2">View Total</string>
    <string name="enternumber">Enter # of Desired Tickets</string>
    <string name="signOutButton">Sign Out</string>
    <string name="signButton">Sign In</string>
    <string name="adminUser">Admin Username</string>
    <string name="adminPass">Admin Password</string>
    <string name="promptButton">Continue</string>
    <string name="fligthForm">New Flight Form</string>
    <string name="flightNumber">Enter Flight Number</string>
    <string name="enterButton5">Enter</string>
    <string name="flightDepart">Enter Depart Location</string>
    <string name="enterArrival">Enter Arrival Location</string>
    <string name="enterDepartTime">Enter Depart Time</string>
    <string name="enterCap">Enter Capacity</string>
    <string name="enterPrice">Enter Price</string>
    <string name="findButton">Find</string>
    <string name="enterID">Enter Flight ID #</string>
    <string name="enterResID">Enter Reservation #</string>
    <string name="deleteButton">Delete</string>
</resources>
