<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewFlightForm">

    <EditText
        android:id="@+id/flightNumberEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/flightNumber"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/departLocEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formTitle" />

    <TextView
        android:id="@+id/formTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/fligthForm"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/flightNumberEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/departLocEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/flightDepart"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/arrivalEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightNumberEdit" />

    <EditText
        android:id="@+id/arrivalEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enterArrival"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/departTimeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departLocEdit" />

    <EditText
        android:id="@+id/departTimeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enterDepartTime"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/flightCapEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalEdit" />

    <EditText
        android:id="@+id/flightCapEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enterCap"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/priceEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departTimeEdit" />

    <EditText
        android:id="@+id/priceEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enterPrice"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/findButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightCapEdit" />

    <Button
        android:id="@+id/findButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:layout_marginBottom="168dp"
        android:text="@string/enterButton5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>