<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReserveFlightPart2">

    <EditText
        android:id="@+id/takenFlightsEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="103dp"
        android:ems="10"
        android:hint="@string/enternumber"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightNumEdit" />

    <TextView
        android:id="@+id/mainDisplay"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="57dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/flightNumEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/flightNumEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/enterFlightName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/takenFlightsEdit"
        app:layout_constraintEnd_toStartOf="@+id/findButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainDisplay" />

    <Button
        android:id="@+id/findButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="17dp"
        android:text="@string/enterButton2"
        app:layout_constraintBottom_toTopOf="@+id/sendTicketButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flightNumEdit"
        app:layout_constraintTop_toBottomOf="@+id/mainDisplay" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="280dp"
        android:layout_marginRight="280dp"
        android:layout_marginBottom="11dp"
        android:text="@string/backButton"
        app:layout_constraintBottom_toTopOf="@+id/mainDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="96dp"
        android:text="@string/sentTicketButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/takenFlightsEdit"
        app:layout_constraintTop_toBottomOf="@+id/findButton" />
</androidx.constraintlayout.widget.ConstraintLayout>